assigning the schema to spark read

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,2 @@
 include dganalytics/connectors/gpc/source_api_schemas/*.json
+include dganalytics/clients/vodafoneqatar/vfqutils/source_data_schemas/*.json
