--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,5 @@
     "azureFunctions.pythonVenv": ".venv",
     "azureFunctions.projectLanguage": "Python",
     "azureFunctions.projectRuntime": "~3",
-    "debug.internalConsoleOptions": "neverOpen",
-    "python.pythonPath": ".venv\\Scripts\\python.exe"
+    "debug.internalConsoleOptions": "neverOpen"
 }
