--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,20 +18,23 @@
                 "AZURE_PASSWORD": "${env:AZURE_PASSWORD}"
             },
             "console": "integratedTerminal",
-            // "args": [
-            //     "--tenant=test",
-            //     "--run_id=t2",
-            //     "--extract_date=2020-09-02",
-            //     "--api_name=wrapup_codes",
-            //     "--org_id=SALMATDEV"
-            // ]
+             "args": [
+                 "--tenant=test",
+                "--run_id=t2",
+                 "--extract_date=2020-09-02",
+                 "--extract_interval_start=2020-09-02T00:01:00",
+                 "--extract_interval_end=2020-09-02T00:02:00",
+                 "--api_name=wfm_adherence",
+                 "--org_id=SALMATDEV"
+             ]
+            /*
             "args": [
                 "--env=local",
                 "--database_name=vodafone-qatar-prod",
                 "--stage_name=User_FCR_KPI_Data",
                 "--step_name=FetchDelta"
             ]
-
+            */
         },
         {
             "name": "Attach to Python Functions",
