added activity_num to json schema for  Top Reason VFQ

--- a/dganalytics/clients/vodafoneqatar/vfqutils/source_data_schemas/JSR_Top_Reason_Data.json
+++ b/dganalytics/clients/vodafoneqatar/vfqutils/source_data_schemas/JSR_Top_Reason_Data.json
@@ -2,6 +2,12 @@
     "fields": [
       {
         "metadata": {},
+        "name": "activity_num",
+        "nullable": true,
+        "type": "string"
+      },
+      {
+        "metadata": {},
         "name": "sub_reason",
         "nullable": true,
         "type": "string"
