--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,8 @@
                  "--extract_interval_start=2020-09-26T14:30:00",
                  "--extract_interval_end=2020-09-27T14:30:00",
                  "--api_name=wfm_adherence",
-                 "--org_id=SALMATDEV"
+                 "--org_id=SALMATDEV",
+                 "--pipeline=activity_wise_points"
              ]
             /*
             "args": [
