added copy to blob pwsh script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,14 @@
     "azureFunctions.pythonVenv": ".venv",
     "azureFunctions.projectLanguage": "Python",
     "azureFunctions.projectRuntime": "~3",
-    "debug.internalConsoleOptions": "neverOpen"
+    "debug.internalConsoleOptions": "neverOpen",
+    "python.pythonPath": "/home/incdev/anaconda3/envs/dganalytics/bin/python",
+    "cSpell.words": [
+        "SIEBELACTIVITY",
+        "TNPS",
+        "TTICKET",
+        "aggr",
+        "ssis",
+        "vodafoneqatar"
+    ]
 }
