--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,7 @@
                 "AZURE_PASSWORD": "${env:AZURE_PASSWORD}"
             },
             "console": "integratedTerminal",
+            /*
              "args": [
                  "--tenant=test",
                 "--run_id=t2",
@@ -28,14 +29,13 @@
                  "--org_id=SALMATDEV",
                  "--pipeline=users"
              ]
-            /*
+            */
             "args": [
                 "--env=local",
-                "--database_name=vodafone-qatar-prod",
-                "--stage_name=User_FCR_KPI_Data",
+                "--database_name=holden-prod",
+                "--stage_name=QA_SLA_ETL",
                 "--step_name=FetchDelta"
             ]
-            */
         },
         {
             "name": "Attach to Python Functions",
