--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ jobs:
       azureSubscription: ${{variables.keyvaultsubscription}}
       ScriptType: 'FilePath'
       ScriptPath: '$(System.DefaultWorkingDirectory)/devops_utils/powershell/getstorageAccesskey.ps1'
-      ScriptArguments: '${{variables.KeyVaultResourcename}} storageaccesskey storageaccesskey databricksinstanceurl databricksuri databricksaccesstoken databrickssecret'
+      ScriptArguments: '${{variables.KeyVaultResourcename}} storagesastoken storagesastoken databricksinstanceurl databricksuri databricksaccesstoken databrickssecret'
       azurePowerShellVersion: 'LatestVersion'
     name: gettingKeyVaultVars
     displayName: Get KeyVault
@@ -79,11 +79,12 @@ jobs:
       uploaddirectory=$(System.DefaultWorkingDirectory)
       storageaccountname=${{variables.lakestorageName}}
       blobcontainername='datagamz'
-      blobcontainerpath='code/temp'
+      blobcontainerpath='code/temp/'
+      TOKENX=$(storagesastoken)
       http_CONST='https://'
       url_PFX='.blob.core.windows.net/'
-      finalblobconnector=$http_CONST$storageaccountname$url_PFX$blobcontainername$blobcontainerpath
-      azcopy copy $uploaddirectory --destination $finalblobconnector  --dest-key $storageKey --recursive --include-pattern="*.py;*.json;*txt;*.in" --exclude-path=".venv;build;devops_utils;dganalytics.egg-info;dist;.vscode" --exclude-pattern="*.pyc"
+      finalblobconnector=$http_CONST$storageaccountname$url_PFX$blobcontainername$blobcontainerpath$TOKENX
+      azcopy copy $uploaddirectory --destination $finalblobconnector --recursive --include-pattern="*.py;*.json;*txt;*.in" --exclude-path=".venv;build;devops_utils;dganalytics.egg-info;dist;.vscode" --exclude-pattern="*.pyc"
     displayName: Upload Code to Blob
 
   - script: |
