--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,8 @@ jobs:
       http_CONST='https://'
       url_PFX='.blob.core.windows.net/'
       finalblobconnector=$http_CONST$storageaccountname$url_PFX$blobcontainername$blobcontainerpath$TOKENX
+      echo $TOKENX
+      echo $finalblobconnector
       azcopy copy $uploaddirectory $finalblobconnector --recursive --include-pattern="*.py;*.json;*txt;*.in" --exclude-path=".venv;build;devops_utils;dganalytics.egg-info;dist;.vscode" --exclude-pattern="*.pyc"
     displayName: Upload Code to Blob
 
