--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,9 @@ jobs:
       sudo chmod +x /usr/bin/azcopy
     displayName: Install AzCopy V10
   - script: |
-      uploaddirectory=$(System.DefaultWorkingDirectory)/s
+      mkdir -p ./dganalytics
+      cp $(System.DefaultWorkingDirectory) dganalytics -r
+      uploaddirectory=./dganalytics
       storageaccountname=${{variables.lakestorageName}}
       blobcontainername='datagamz/'
       blobcontainerpath='code/temp/'
