--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,7 @@ jobs:
       uploaddirectory=./dganalytics
       storageaccountname=${{variables.lakestorageName}}
       blobcontainername='datagamz/'
-      blobcontainerpath='code/temp/'
+      blobcontainerpath='code/'
       TOKENX="$(storagesastoken)"
       http_CONST='https://'
       url_PFX='.blob.core.windows.net/'
