Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,10 @@ jobs:
   - script: |
       sudo apt install tree
   - script: |
+      cd $(Pipeline.Workspace)
+      tree
+      echo "============================"
+      cd $(System.DefaultWorkingDirectory)
       tree
 
   # - task: AzurePowerShell@5
