--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,19 +139,6 @@ jobs:
     displayName: Deploy Multiple ADF pipelines
     condition: and(succeeded(), eq('${{parameters.ADFdeployment}}', true ))
 
-- job: AppFunctionDeployment
-  condition: eq('${{parameters.tenantSpecific}}', true )
-  pool:
-    vmImage: ${{variables.vmImageName}}
-  variables:
-    resourceGroupName: ${{ variables.rgprefix }}analytics
-    KeyVaultResourcename: ${{ variables.rgprefix }}secrets
-    keyvaultsubscription: ${{ variables.rgprefix }}SecretsAccess
-    lakestorageName: ${{ variables.rgprefix }}lakestorage
-    sparkName: ${{ variables.rgprefix }}spark
-    storageAccountName: ${{ variables.rgprefix }}realtimestorage
-
-  steps:
   - task: AzurePowerShell@5
     inputs:
       azureSubscription: ${{variables.azureResourceManagerConnection}}
@@ -161,4 +148,4 @@ jobs:
       azurePowerShellVersion: 'LatestVersion'
     name: Deploy_App_funcs_${{ parameters.environment }}
     displayName: Deploy App Func Code
-    condition: and(succeeded(), eq('${{parameters.enableSourceSystem}}', true ))
+    condition: and(succeeded(), eq('${{parameters.AppFunctionDeployment}}', true ))
