--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
             },
             "console": "integratedTerminal",
              "args": [
-                 "--tenant=test",
+                 "--tenant=hellofresh",
                 "--run_id=t2",
                  "--extract_date=2020-09-26",
                  "--extract_interval_start=2020-09-26T14:30:00",
