--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,11 +21,10 @@
              "args": [
                  "--tenant=hellofresh",
                 "--run_id=t2",
-                 "--extract_date=2020-09-26",
-                 "--extract_interval_start=2020-09-26T14:30:00",
-                 "--extract_interval_end=2020-09-27T14:30:00",
-                 "--api_name=wfm_adherence",
-                 "--org_id=SALMATDEV",
+                 "--extract_start_time=2020-09-26T00:00:00Z",
+                 "--extract_end_time=2020-09-26T00:30:00Z",
+                 "--api_name=conversation_details",
+                 "--org_id=hellofresh",
                  "--pipeline=users"
              ]
             /*
