Survey DynamixConnector and Cleanup GPC

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include dganalytics/connectors/gpc/source_api_schemas/*.json
+include dganalytics/connectors/sdx/source_api_schemas/*.json
 include dganalytics/clients/vodafoneqatar/vfqutils/source_data_schemas/*.json
 include dganalytics/clients/holden/utils/source_data_schemas/*.json
