make common power bi export to produce parquet files

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ azure-mgmt-resource
 azure-keyvault
 azure-keyvault-secrets
 azure-identity
-azure-storage-blob~=12.4.0
+azure-storage-blob
 azure-storage-file-datalake
 websocket_client
 dnspython
