--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ build/
 .vscode/launch.json
 .notebooks/*
 .DS_Store
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/PythonSettings.json
+/.vs/dganalytics/v16/.suo
+/.vs/dganalytics/config/applicationhost.config
+/env
