simplyenergy gpc connector v2 with survey data and sftp export

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-pandas
-pyspark
-azure-datalake-store
-findspark
-compress_json
-inflection
-websocket_client
-pyarrow
 azure-core
 azure-common
-azure-mgmt-resource
+azure-datalake-store
+azure-identity
 azure-keyvault
 azure-keyvault-secrets
-azure-identity
+azure-mgmt-resource
 azure-storage-blob
 azure-storage-file-datalake
-websocket_client
+compress_json
 dnspython
+findspark
+inflection
+pandas
+pyarrow
 pymongo
+pysftp
+pyspark
+requests
+websocket_client
+websocket_client
 xlrd
