--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,17 @@ dnspython
 findspark
 inflection
 pandas
-pyarrow
 pymongo
 pysftp
 pyspark
 requests
 websocket_client
-websocket_client
 xlrd
 py7zr
 requests[security]
+validate_email
+click
+openpyxl
+pyunpack
+pyxlsb
+threading
